--- a/mosi/views/abtest/templates/abtest_done.jinja
+++ b/mosi/views/abtest/templates/abtest_done.jinja
@@ -2,8 +2,8 @@
 {% block body %}
     <div class='row mb-3'>
         <div class='col-12 mb-3'>
-        {% if mos.done_text %}
-            {{ mos.done_text }}
+        {% if abtest.done_text %}
+            {{ abtest.done_text }}
         {% else %}
             <h1 class='font-weight-bold text-center'>
                 Takk fyrir þátttökuna!
