--- a/mosi/views/main/templates/_header.jinja
+++ b/mosi/views/main/templates/_header.jinja
@@ -21,6 +21,11 @@
                 <a class="nav-link" {% if section == 'abtest' %}style="color: {{config.COLOR_PALETTE.fourth}}"{% endif %} href="{{url_for('abtest.abtest_list')}}">AB prufur</a>
             </li>
         {% endif %}
+        {% if not current_user.is_anonymous and current_user.is_admin() %}
+            <li class="nav-item {% if section == 'sus' %}active{% endif %}">
+                <a class="nav-link" {% if section == 'sus' %}style="color: {{config.COLOR_PALETTE.fourth}}"{% endif %} href="{{url_for('sus.sus_list')}}">SUS prufur</a>
+            </li>
+        {% endif %}
         {% if not current_user.is_anonymous %}
             <li class="nav-item dropdown">
                 <a class="nav-link" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown">
