small wording fix" ds

--- a/mosi/views/sus/templates/sus.jinja
+++ b/mosi/views/sus/templates/sus.jinja
@@ -8,10 +8,10 @@
             {% if sus_list | length == 0%}
                 <span id="additional-info">Hladdu upp setningum til að búa til SUS próf</span>
             {% else %}
-                <span id="additional-info">Veldu setningar til að nota í prófinu</span>
+                <span id="additional-info">Allar setningar verða notaðar í prófinu</span>
             {% endif %}
         {% else %}
-            <span class='d-none' id="additional-info">Veldu setningar til að nota í prófinu</span>
+            <span class='d-none' id="additional-info">Allar setningar verða notaðar í prófinu</span>
         {% endif %}
     </div>
 {% endblock %}
