--- a/mosi/views/abtest/templates/abtest_permutation_table.jinja
+++ b/mosi/views/abtest/templates/abtest_permutation_table.jinja
@@ -17,31 +17,32 @@
         <tbody>
             {% for p in data['info']['perms'] %}
                 <tr>
-                    <td>
+                    <td rel="tooltip" title="Model: {{data['instances'][p[0]].model_idx}} &#013;Voice: {{data['instances'][p[0]].voice_idx}}  &#013;Ground truth: {{data['instances'][p[0]].is_reference}}">
                         {{data['instances'][p[0]].get_printable_id}}
                         <audio id='audio-{{data["instances"][p[0]].custom_recording.id}}' src="{{data['instances'][p[0]].custom_recording.get_download_url()}}" type="audio/wav"></audio>
                         <button type='button' class='btn btn-link btn-sm' onClick="play({{data['instances'][p[0]].custom_recording.id}})">
                             <i id='playButtonIcon-{{data['instances'][p[0]].custom_recording.id}}' class='fa fa-play'></i>
                         </button>
                     </td>
-                    <td>
+                    <td rel="tooltip" title="Model: {{data['instances'][p[1]].model_idx}} &#013;Voice: {{data['instances'][p[1]].voice_idx}}  &#013;Ground truth: {{data['instances'][p[1]].is_reference}}">
                         {{data['instances'][p[1]].get_printable_id}}
                         <audio id="audio-{{data['instances'][p[1]].custom_recording.id}}" src="{{data['instances'][p[1]].custom_recording.get_download_url()}}" type="audio/wav"></audio>
                         <button type='button' class='btn btn-link btn-sm' onClick="play({{data['instances'][p[1]].custom_recording.id}})">
                             <i id='playButtonIcon-{{data["instances"][p[1]].custom_recording.id}}' class='fa fa-play'></i>
                         </button>
                     </td>
-                    <td>
-                        {% if p | length == 2 %}
-
-                        {% else %}
+                    {% if p | length == 2 %}
+                        <td>
+                        </td>
+                    {% else %}
+                        <td rel="tooltip" title="Model: {{data['instances'][p[2]].model_idx}} &#013;Voice: {{data['instances'][p[2]].voice_idx}}  &#013;Ground truth: {{data['instances'][p[2]].is_reference}}">
                             {{data['instances'][p[2]].get_printable_id}}
                             <audio id="audio-{{data['instances'][p[2]].custom_recording.id}}" src="{{data['instances'][p[2]].custom_recording.get_download_url()}}" type="audio/wav"></audio>
                             <button type='button' class='btn btn-link btn-sm' onClick="play({{data['instances'][p[2]].custom_recording.id}})">
                                 <i id='playButtonIcon-{{data["instances"][p[2]].custom_recording.id}}' class='fa fa-play'></i>
                             </button>
-                        {% endif %}
-                    </td>
+                        </td>
+                    {% endif %}
                     <td>
                         {% if p | length == 2 %}
                             
