--- a/mosi/views/abtest/templates/abtest_tuple_table.jinja
+++ b/mosi/views/abtest/templates/abtest_tuple_table.jinja
@@ -38,14 +38,14 @@
             {% for t in abtest_tuples %}
                 <tr>
                     <td >
-                        {{t.first.get_printable_id}}
+                        {{t.first.get_printable_id}} ({{t.first.custom_recording.id}})
                         <audio preload="none" id='audio-{{t.first.custom_recording.id}}' src="{{t.first.custom_recording.get_download_url()}}" type="audio/wav"></audio>
                         <button type='button' class='btn btn-link btn-sm' onClick="play({{t.first.custom_recording.id}}, '#playButtonIcon-tupleTable-')">
                             <i id='playButtonIcon-tupleTable-{{t.first.custom_recording.id}}' class='fa fa-play'></i>
                         </button>
                     </td>
                     <td>
-                        {{t.second.get_printable_id}}
+                        {{t.second.get_printable_id}} ({{t.second.custom_recording.id}})
                         <audio preload="none" id="audio-{{t.second.custom_recording.id}}" src="{{t.second.custom_recording.get_download_url()}}" type="audio/wav"></audio>
                         <button type='button' class='btn btn-link btn-sm' onClick="play({{t.second.custom_recording.id}}, '#playButtonIcon-tupleTable-')">
                             <i id='playButtonIcon-tupleTable-{{t.second.custom_recording.id}}' class='fa fa-play'></i>
