--- a/mosi/views/abtest/templates/abtest_results_instances_table.jinja
+++ b/mosi/views/abtest/templates/abtest_results_instances_table.jinja
@@ -26,7 +26,7 @@
         {% for abtest in abtest_list %}
             <tr>
                 <td>
-                    <audio id="audio-{{abtest.custom_recording.id}}" src={{abtest.custom_recording.get_download_url()}} type="audio/wav"></audio>
+                    <audio preload="none" id="audio-{{abtest.custom_recording.id}}" src={{abtest.custom_recording.get_download_url()}} type="audio/wav"></audio>
                     <button type='button' class='btn btn-link btn-sm' onClick="play({{abtest.custom_recording.id}})">
                         <i id='playButtonIcon-{{abtest.custom_recording.id}}' class='fa fa-play'></i>
                     </button>
