--- a/mosi/views/abtest/templates/abtest_test.jinja
+++ b/mosi/views/abtest/templates/abtest_test.jinja
@@ -52,7 +52,9 @@
                 </div>
             </div>
         {% endif %}
-        {% if not invert_A_B_arrangement%}
+        {#
+        {% if not invert_A_B_arrangement%} 
+        #}
             <div class='row mt-2'>
                 <div class='col-6 text-center'>
                     <audio id="audio-recording" src={{audio_data[0].first.url}} type="audio/wav"></audio>
@@ -67,6 +69,20 @@
                     </button>
                 </div>
             </div>
+
+            <div class='my-4'>
+                <form class="text-center" id="ratingButtons">
+                    <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                        <label class="btn btn-outline-primary center-block border-success rounded-pill-left" id="label1" name="optionsLabel">
+                            <input class="mx-3 ratingButton" type="radio" name="options" onchange="getRating(value)" id="option1" value="1">A
+                        </label>
+                        <label class="btn btn-outline-primary center-block border-success rounded-pill-right" id="label2" name="optionsLabel">
+                            <input class="mx-3 ratingButton" type="radio" name="options" onchange="getRating(value)" id="option2" value="2">B
+                        </label>
+                    </div>
+                </form>
+            </div>
+        {#
         {% else %}
             <div class='row mt-2'>
                 <div class='col-6 text-center'>
@@ -83,22 +99,21 @@
                 </div>
                 
             </div>
+
+            <div class='my-4'>
+                <form class="text-center" id="ratingButtons">
+                    <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                        <label class="btn btn-outline-primary center-block border-success rounded-pill-left" id="label2" name="optionsLabel">
+                            <input class="mx-3 ratingButton" type="radio" name="options" onchange="getRating(value)" id="option2" value="2">A
+                        </label>
+                        <label class="btn btn-outline-primary center-block border-success rounded-pill-right" id="label1" name="optionsLabel">
+                            <input class="mx-3 ratingButton" type="radio" name="options" onchange="getRating(value)" id="option1" value="1">B
+                        </label>
+                    </div>
+                </form>
+            </div>
         {% endif %}
-
-      <div class='my-4'>
-            <form class="text-center" id="ratingButtons">
-                <div class="btn-group btn-group-toggle" data-toggle="buttons">
-                    <label class="btn btn-outline-primary center-block border-success rounded-pill-left" name="optionsLabel">
-                        <input class="mx-3 ratingButton" type="radio" name="options" onchange="getRating(value)" id="option1" value="1">A
-                    </label>
-                    <label class="btn btn-outline-primary center-block border-success rounded-pill-right" name="optionsLabel">
-                        <input class="mx-3 ratingButton" type="radio" name="options" onchange="getRating(value)" id="option2" value="2">B
-                    </label>
-                </div>
-            </form>
-        </div>
-    </div>
-
+        #}
     <div class='row'>
         <div class='col-xl-6 col-md-8 offset-xl-3 offset-md-2 col-12 controls mb-3 d-flex justify-content-between'>
             <button id='prev' class='btn btn-sm btn-secondary rounded-pill' type='button'>
@@ -214,6 +229,7 @@
         // ---------------- Actions --------------------
         function nextAction(){
             // Increment the sentence index and update the UI
+            stopPlayingAll();
             if(abtestIndex < numABTuples - 1 && !nextButton.disabled){
                 abtestIndex += 1;
                 $( "#abtestUI" ).animate({
@@ -225,6 +241,7 @@
         }
 
         function prevAction(){
+            stopPlayingAll();
             // Decrement the sentence index and update the UI
             if(abtestIndex > 0){
                 abtestIndex -= 1;
@@ -236,12 +253,44 @@
             }
         }
 
+        function stopPlayingAll(){
+            if(isPlaying){
+                //stop
+                isPlaying = false;
+                playButtonIcon_first.removeClass('fa-stop').addClass('fa-play');
+                playButtonIcon_second.removeClass('fa-stop').addClass('fa-play');
+                if (audio_json[abtestIndex]['reference']){
+                    playButtonIcon_ref.removeClass('fa-stop').addClass('fa-play');
+                }
+                audio.pause();
+                audio.currentTime = 0;
+            }
+        }
 
         function playAction(event){
+            console.log(audio_json)
             var btn = event.data.btn_num
             // Play the recording for the sentence at the current index.
             recordingAudio.src = audio_json[abtestIndex][btn]['url']
-            play(audio_json[abtestIndex][btn].id, btn)
+            if(btn == 'reference'){
+                play(audio_json[abtestIndex][btn].id, btn)
+            }
+            else{
+                if(audio_json[abtestIndex]['invert_A_B_arrangement']){
+                    if(btn == 'first'){
+                        recordingAudio.src = audio_json[abtestIndex]['second']['url']
+                        play(audio_json[abtestIndex]['second'].id, btn)
+                    }
+                    if(btn == 'second'){
+                        recordingAudio.src = audio_json[abtestIndex]['first']['url']
+                        play(audio_json[abtestIndex]['first'].id, btn)
+                    }
+                }
+                else{
+                    play(audio_json[abtestIndex][btn].id, btn)
+                }
+            }
+            
         }
 
         var isPlaying = false;
@@ -249,7 +298,18 @@
         var audio;
 
         function getRating(value){
+
             audio_json[abtestIndex]['rating'] = value
+            if(audio_json[abtestIndex]['invert_A_B_arrangement']){
+                if(value == '1'){
+                    audio_json[abtestIndex]['rating'] = '2'
+                }
+                if(value == '2'){
+                    audio_json[abtestIndex]['rating'] = '1'
+                }
+            }
+            //updateUI();
+            setButtonUI();
             setFinishButtonUI();
         }
 
@@ -298,10 +358,12 @@
             }
             if(isPlaying){
                 //stop
+                stopPlayingAll()
                 isPlaying = false;
-                playButtonIcon_btn.removeClass('fa-stop').addClass('fa-play');
-                audio.pause();
-                audio.currentTime = 0;
+                //playButtonIcon_btn.removeClass('fa-stop').addClass('fa-play');
+                
+                //audio.pause();
+                //audio.currentTime = 0;
                 // play the other clip if another id was chosen
                 if(id !== currentId){
                     play(id, btn);
@@ -322,9 +384,10 @@
                 audio.onended = function(){
                     playButtonIcon_btn.removeClass('fa-stop').addClass('fa-play');
                     audio_json[abtestIndex][btn]['is_played'] = true;
-                    setRatingsButtonsStatus();
-                    setButtonUI();
-                    setFinishButtonUI();
+                    //setRatingsButtonsStatus();
+                    //setButtonUI();
+                    //setFinishButtonUI();
+                    updateUI();
                 }
                 // play audio
                 playButtonIcon_btn.removeClass('fa-play').addClass('fa-stop');
@@ -407,12 +470,24 @@
         };
 
         function setRadioUI(){
-            var labels = ratingButtons.getElementsByTagName('label');
+            var label1 = document.getElementById('label1');
+            var label2 = document.getElementById('label2');
+            var labels = [label1, label2]
             for(let i = 0; i < labels.length; i++){
                 labels[i].classList.remove("active");
             }
             if(audio_json[abtestIndex]['rating']){
-                labels[audio_json[abtestIndex]['rating']-1].classList.add("active");
+                if(audio_json[abtestIndex]['invert_A_B_arrangement']){
+                    if(audio_json[abtestIndex]['rating'] == 1){
+                        labels[1].classList.add("active");
+                    }
+                    if(audio_json[abtestIndex]['rating'] == 2){
+                        labels[0].classList.add("active");
+                    }
+                }
+                else{
+                    labels[audio_json[abtestIndex]['rating']-1].classList.add("active");
+                }
             }
             if(audio_json[abtestIndex]['tuple']['has_ref']){
                 if(audio_json[abtestIndex]['first']['is_played'] && audio_json[abtestIndex]['second']['is_played'] && audio_json[abtestIndex]['reference']['is_played']){
@@ -443,7 +518,6 @@
             prevButton.disabled = false;
             nextButton.disabled = false;
             nextButton.style.display = "";
-            console.log(audio_json[abtestIndex])
             if (abtestIndex == 0) {
                 prevButton.disabled = true;
             }
@@ -453,7 +527,8 @@
                 }
             }
             else{
-                if (!audio_json[abtestIndex]['first']['is_played'] || !audio_json[abtestIndex]['second']['is_played']) {
+                //if (!audio_json[abtestIndex]['first']['is_played'] || !audio_json[abtestIndex]['second']['is_played']) {
+                if (!check_if_tuples_are_rated(abtestIndex+1)) {
                     nextButton.disabled = true;
                 }
             }
@@ -466,11 +541,37 @@
             
         }
 
+        function check_if_tuples_are_rated(upto=null){
+            var finished = true;
+            if(!upto){
+                upto = audio_json.length
+            }
+            for(var i = 0; i < upto; i++){
+                if (!('rating' in audio_json[i])){
+                    finished = false;
+                    break;
+                }
+            }
+            return finished
+        }
+
+        function check_if_tuples_are_played(){
+            var finished = true;
+            for(var i = 0; i < audio_json.length; i++){
+                if (!('rating' in audio_json[i])){
+                    finished = false;
+                    break;
+                }
+            }
+            return finished
+        }
+
         function setFinishButtonUI(){
-            if (abtestIndex == numABTuples -1 && !audio_json[abtestIndex]['first']['is_played'] && !audio_json[abtestIndex]['second']['is_played']) {
+            //if (abtestIndex == numABTuples -1 && (!audio_json[abtestIndex]['first']['is_played'] || !audio_json[abtestIndex]['second']['is_played'])) {
+            if (abtestIndex == numABTuples -1 && (!check_if_tuples_are_rated())) {
                 finishButton.disabled = true;
                 finishButton.style.display = "";
-            } else if (abtestIndex == numABTuples -1) {
+            } else if (abtestIndex == numABTuples -1 && check_if_tuples_are_rated()) {
                 finishButton.disabled = false;
                 finishButton.style.display = "";
             } else {
