--- a/mosi/views/abtest/templates/abtest_users_table.jinja
+++ b/mosi/views/abtest/templates/abtest_users_table.jinja
@@ -12,6 +12,9 @@
         <th>
             Staðalfrávik
         </th>
+        <th class="text-center">
+            {{macros.btn_icon('trash', 'r')}}
+        </th>
     </thead>
     <tbody>
         {% for user in users %}
@@ -20,6 +23,11 @@
                 <td>{{user.total}}</td>
                 <td>{{user.mean}}</td>
                 <td>{{user.std}}</td>
+                <td class="float-left">
+                    <button id="deleteButton" name="{{user.user.id}}" onClick="deleteUserRatingsButton(name)" class="btn btn-secondary btn-sm text-danger float-right" type="button" data-toggle='modal', data-target='#deleteUserRatingsModal'>
+                        {{macros.btn_icon('trash', 'r')}} Eyða
+                    </button>
+                </td>
             </tr>
         {% endfor %}
     </tbody>
