various fixes and smoothing of UX

--- a/mosi/views/abtest/templates/abtest.jinja
+++ b/mosi/views/abtest/templates/abtest.jinja
@@ -136,18 +136,18 @@
                 </div>
                 <div class="modal-body">
                     <p>
-                        Athugaðu að hlaða þarf upp <code>.zip</code> skrá sem inniheldur möppu sem heitir <code>audio</code> og skrá sem heitir <code>index.csv</code>.
-                        <code>Audio</code> mappan inniheldur allar talgervingarnar á <code>.wav</code> formi og <code>index.tsv</code> tengir auðkenni hverrar MOS-setningar við nafn
+                        Athugaðu að hlaða þarf upp <code>.zip</code> skrá sem inniheldur möppu sem heitir <code>audio</code> og skrá sem heitir <code>index.csv</code>. 
+                        <code>Audio</code> mappan inniheldur allar talgervingarnar á <code>.wav</code> formi og <code>index.csv</code> tengir auðkenni hverrar setningar við nafn
                         talgervingarinnar í audio möppunni. <br> <br>
                         Í <code>index.csv</code> eru eftirfarandi dálkar:
                         <li>(Áskilið) Dálkur 1 er nafn upptöku í <code>audio</code> möppunni.</li>
-                        <li>(Áskilið) Dálkur 2 er <code>R</code> ef setningin er upptaka en <code>S</code> ef setningin er talgerving.</li>
+                        <li>(Áskilið) Dálkur 2 er <code>R</code> ef setningin er upptaka en <code>S</code> ef setningin er talgerving.</li> Það sem merkt er <code>S</code> getur verið notað sem jarðtenging(ground truth) í ABX prófi.
                         <li>(Áskilið) Dálkur 3 er setningin sjálf. </li>
                         <li>(Valkvætt) Dálkur 4 er númer á rödd, ef sama röddin les margar setningar þá á hún alltaf að bera sama númer hér </li>
                         <li>(Valkvætt) Dálkur 5 er númer á setningu, ef margar raddir lesa sömu setninguna þá þurfa þær allar að bera sama númar hér </li>
                         <li>(Valkvætt) Dálkur 6 er spurning ef það á að bera upp spurningu fyrir notnendur. </li>
                         <br>
-                        Sjá sýnidæmi
+                        Sjá sýnidæmi.
                     </p>
                     {% with form=abtest_form %}
                         {% include 'forms/_form.jinja' %}
